# AutoDrafter

./: CMakeLists.txt  README.md  main.cpp
include/: Champion.h  Drafter.h  Exceptions.h  Player.h  Rank.h  Server.h
src/: Champion.cpp  Drafter.cpp  Player.cpp  Rank.cpp  Server.cpp
